--- a/CSS/style.css
+++ b/CSS/style.css
@@ -55,8 +55,16 @@ img{
 
 /*HEADER*/
 
+@media (min-width: 768px) {
+    .barra{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
+
 .site_header{
-    background-image: url(../img/15481.jpg);
+    background-image: url(../img/header.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -85,12 +93,28 @@ img{
     font-size: 1.8rem;
 }
 
+@media (min-width: 768px) {
+    .navegacion a{
+        display: inline;
+        margin-right: 2rem;
+    }
+    .navegacion a:last-of-type{
+        margin: 0;
+    }
+}
+
 /*HEADER TEXTO*/
 
 .texto_header{
     color: #ffffff;
     text-align: center;
     margin-top: 5rem;
+}
+
+@media (min-width: 768px){
+    .texto_header{
+        margin-top: 15rem;
+    }
 }
 
 .texto_header p{
