--- a/CSS/style.css
+++ b/CSS/style.css
@@ -55,6 +55,74 @@ img{
     margin: 0;
 }
 
+/*GRID*/
+
+@media (min-width: 768px){
+    .grid{
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+
+    .centrar_columnas{
+        justify-content: center;
+    }
+
+    .columnas_4{
+        flex: 0 0 calc(33.3% - 1rem);
+    }]
+
+    .columnas_6{
+        flex: 0 0 calc(50% - 1rem);
+    }
+
+    .columnas_8{
+        flex: 0 0 calc(66.6% - 1rem);
+    }
+
+    .columnas_10{
+        flex: 0 0 calc(83.33% - 1rem);
+    }
+
+    .columnas_12{
+        flex: 0 0 100%;
+    }
+}
+
+/*BOTONES*/
+
+.boton{
+    display: block;
+    text-align: center;
+    padding: 1rem 3rem;
+    margin: 2rem 0;
+    color: white;
+    text-decoration: none;
+    font-family: "PT Sans", sans-serif;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-weight: 2rem;
+    flex: 0 0 100%;
+}
+
+.boton:hover{
+    cursor: pointer;
+}
+
+@media (min-width: 768px){
+    .boton{
+        display: inline-block;
+        flex: 0 0 auto;
+}
+
+.boton_primario{
+    background-color: #000000;
+}
+
+.boton_secundario{
+    background-color: #784d3c;
+}
+
 /*HEADER*/
 
 @media (min-width: 768px) {
@@ -93,6 +161,8 @@ img{
     text-align: center;
     display: block;
     font-size: 1.8rem;
+    color: #ffffff;
+    text-decoration: none;
 }
 
 @media (min-width: 768px) {
@@ -169,6 +239,7 @@ img{
 }
 
 .curso{
+    padding-top: 3rem;
     padding-bottom: 3rem;
     border-bottom: 1px solid #e1e1e1;
 }
@@ -186,3 +257,61 @@ img{
 .curso p span{
     font-weight: 400;
 }
+
+/*FOOTER*/
+
+.site_footer{
+    background-color: black;
+    padding: 3rem;
+    margin-top: 4rem;
+}
+
+.site_footer p{
+    color: white;
+    font-size: 4rem;
+    font-weight: 400;
+    font-family: "PT Sans", sans-serif;
+    text-align: center;
+}
+
+.site_footer p span{
+    font-weight: 700;
+}
+
+/*CONTACTO*/
+
+.formulario_contacto{
+    background-color: #ffffff;
+    padding: 5rem;
+}
+
+@media (min-width: 768px){
+    .formulario_contacto{
+        margin-top: -10rem;
+    }
+}    
+
+.formulario_contacto .campo{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 2rem;
+}
+
+.formulario_contacto .campo label{
+    flex: 0 0 8rem;
+}
+
+.formulario_contacto .campo input:not([type="submit"]),
+.formulario_contacto textarea{
+    flex: 1;
+    border: 1px solid #e1e1e1;
+    padding: 1rem;
+}
+
+.formulario_contacto textarea{
+    height: 20rem;
+}
+
+.formulario_contacto .enviar{
+    display: flex;
+    justify-content: flex-end;
